summary dataframe created

--- a/Pymaceuticals/main.ipynb
+++ b/Pymaceuticals/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -179,32 +179,420 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mouse ID</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th>Metastatic Sites</th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age_months</th>\n",
+       "      <th>Weight (g)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>5</td>\n",
+       "      <td>48.786801</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>5</td>\n",
+       "      <td>47.570392</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>620</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>10</td>\n",
+       "      <td>51.745156</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>681</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>10</td>\n",
+       "      <td>49.880528</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>815</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>15</td>\n",
+       "      <td>51.325852</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>869</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>15</td>\n",
+       "      <td>53.442020</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>950</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>20</td>\n",
+       "      <td>55.326122</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1111</th>\n",
+       "      <td>g989</td>\n",
+       "      <td>20</td>\n",
+       "      <td>54.657650</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Propriva</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>21</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Mouse ID  Timepoint  Tumor Volume (mm3)  Metastatic Sites Drug Regimen  \\\n",
+       "107      g989          0           45.000000                 0     Propriva   \n",
+       "137      g989          0           45.000000                 0     Propriva   \n",
+       "329      g989          5           48.786801                 0     Propriva   \n",
+       "360      g989          5           47.570392                 0     Propriva   \n",
+       "620      g989         10           51.745156                 0     Propriva   \n",
+       "681      g989         10           49.880528                 0     Propriva   \n",
+       "815      g989         15           51.325852                 1     Propriva   \n",
+       "869      g989         15           53.442020                 0     Propriva   \n",
+       "950      g989         20           55.326122                 1     Propriva   \n",
+       "1111     g989         20           54.657650                 1     Propriva   \n",
+       "\n",
+       "         Sex  Age_months  Weight (g)  \n",
+       "107   Female          21          26  \n",
+       "137   Female          21          26  \n",
+       "329   Female          21          26  \n",
+       "360   Female          21          26  \n",
+       "620   Female          21          26  \n",
+       "681   Female          21          26  \n",
+       "815   Female          21          26  \n",
+       "869   Female          21          26  \n",
+       "950   Female          21          26  \n",
+       "1111  Female          21          26  "
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#mouse_duplicates = mouse_study_complete[mouse_study_complete[[\"Mouse ID\",\"Timepoint\"]].duplicated()]\n",
+    "\n",
+    "mouse_duplicates = mouse_study_complete[mouse_study_complete.duplicated(subset=[\"Mouse ID\",\"Timepoint\"],keep=False)]\n",
+    "\n",
+    "mouse_duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mouse_study_complete = mouse_study_complete.loc[mouse_study_complete[\"Mouse ID\"] != \"g989\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0       False\n",
-      "1       False\n",
-      "2       False\n",
-      "3       False\n",
-      "4       False\n",
-      "        ...  \n",
-      "1888     True\n",
-      "1889     True\n",
-      "1890     True\n",
-      "1891     True\n",
-      "1892     True\n",
-      "Name: Mouse ID, Length: 1893, dtype: bool\n"
+      "248\n"
      ]
     }
    ],
    "source": [
-    "mouse_duplicates = mouse_study_complete[\"Mouse ID\"].duplicated()\n",
+    "print(len(mouse_study_complete[\"Mouse ID\"].unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Drug Regimen\n",
+       "Capomulin    4.994774\n",
+       "Ceftamin     6.268188\n",
+       "Infubinol    6.567243\n",
+       "Ketapril     8.279709\n",
+       "Naftisol     8.134708\n",
+       "Placebo      7.821003\n",
+       "Propriva     6.622085\n",
+       "Ramicane     4.846308\n",
+       "Stelasyn     7.710419\n",
+       "Zoniferol    6.966589\n",
+       "Name: Tumor Volume (mm3), dtype: float64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#summary_df = mouse_study_complete.set_index([\"Drug Regimen\"])\n",
     "\n",
-    "print(mouse_duplicates)"
+    "#summary_df = summary_df.groupby([\"Drug Regimen\"]).mean()[\"Tumor Volume (mm3)\"]\n",
+    "\n",
+    "#summary_df\n",
+    "\n",
+    "mean_tumor_size = mouse_study_complete.groupby([\"Drug Regimen\"]).mean()[\"Tumor Volume (mm3)\"]\n",
+    "median_tumor_size = mouse_study_complete.groupby([\"Drug Regimen\"]).mean()[\"Tumor Volume (mm3)\"]\n",
+    "tumor_size_variance = mouse_study_complete.groupby([\"Drug Regimen\"]).var()[\"Tumor Volume (mm3)\"]\n",
+    "tumor_size_std_dev = mouse_study_complete.groupby([\"Drug Regimen\"]).std()[\"Tumor Volume (mm3)\"]\n",
+    "tumor_size_std_err = mouse_study_complete.groupby([\"Drug Regimen\"]).sem()[\"Tumor Volume (mm3)\"]\n",
+    "\n",
+    "tumor_size_std_dev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean Tumor Size</th>\n",
+       "      <th>Median Tumor Size</th>\n",
+       "      <th>Tumor Size Variance</th>\n",
+       "      <th>Tumor Size Std. Dev.</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>24.947764</td>\n",
+       "      <td>4.994774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>52.591172</td>\n",
+       "      <td>52.591172</td>\n",
+       "      <td>39.290177</td>\n",
+       "      <td>6.268188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>43.128684</td>\n",
+       "      <td>6.567243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>55.235638</td>\n",
+       "      <td>55.235638</td>\n",
+       "      <td>68.553577</td>\n",
+       "      <td>8.279709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>54.331565</td>\n",
+       "      <td>54.331565</td>\n",
+       "      <td>66.173479</td>\n",
+       "      <td>8.134708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>54.033581</td>\n",
+       "      <td>61.168083</td>\n",
+       "      <td>7.821003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>52.320930</td>\n",
+       "      <td>52.320930</td>\n",
+       "      <td>43.852013</td>\n",
+       "      <td>6.622085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>23.486704</td>\n",
+       "      <td>4.846308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>54.233149</td>\n",
+       "      <td>54.233149</td>\n",
+       "      <td>59.450562</td>\n",
+       "      <td>7.710419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>53.236507</td>\n",
+       "      <td>53.236507</td>\n",
+       "      <td>48.533355</td>\n",
+       "      <td>6.966589</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Mean Tumor Size  Median Tumor Size  Tumor Size Variance  \\\n",
+       "Drug Regimen                                                            \n",
+       "Capomulin           40.675741          40.675741            24.947764   \n",
+       "Ceftamin            52.591172          52.591172            39.290177   \n",
+       "Infubinol           52.884795          52.884795            43.128684   \n",
+       "Ketapril            55.235638          55.235638            68.553577   \n",
+       "Naftisol            54.331565          54.331565            66.173479   \n",
+       "Placebo             54.033581          54.033581            61.168083   \n",
+       "Propriva            52.320930          52.320930            43.852013   \n",
+       "Ramicane            40.216745          40.216745            23.486704   \n",
+       "Stelasyn            54.233149          54.233149            59.450562   \n",
+       "Zoniferol           53.236507          53.236507            48.533355   \n",
+       "\n",
+       "              Tumor Size Std. Dev.  \n",
+       "Drug Regimen                        \n",
+       "Capomulin                 4.994774  \n",
+       "Ceftamin                  6.268188  \n",
+       "Infubinol                 6.567243  \n",
+       "Ketapril                  8.279709  \n",
+       "Naftisol                  8.134708  \n",
+       "Placebo                   7.821003  \n",
+       "Propriva                  6.622085  \n",
+       "Ramicane                  4.846308  \n",
+       "Stelasyn                  7.710419  \n",
+       "Zoniferol                 6.966589  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_summary = {\"Mean Tumor Size\": mean_tumor_size,\n",
+    "                 \"Median Tumor Size\": median_tumor_size,\n",
+    "                 \"Tumor Size Variance\": tumor_size_variance,\n",
+    "                 \"Tumor Size Std. Dev.\": tumor_size_std_dev,\n",
+    "                 \"Tumor Size Std. Err.\": tumor_size_std_err}\n",
+    "\n",
+    "summary_df = pd.DataFrame(data_summary)\n",
+    "\n",
+    "summary_df"
    ]
   }
  ],
