scatter plots generated

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -1173,7 +1173,7 @@
   "kernelspec": {
    "display_name": "PythonData",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1185,7 +1185,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7 (default, May  6 2020, 11:45:54) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.7.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ed624e979f463f68b2cf9d74dc6f7fce37aed34951cee674ee352dc9bf18b1be"
+   }
   }
  },
  "nbformat": 4,
